fix the form styling on iphone

--- a/style.css
+++ b/style.css
@@ -141,11 +141,15 @@ button {
   width: 100px;
   padding: 5px;
   margin-bottom: 50px;
+  -webkit-appearance: none;
+  
   
 }
 
 .btn {
   margin-top: 100px;
+  -webkit-appearance: none;
+ 
   
 }
 
@@ -159,6 +163,7 @@ form {
   visibility: hidden;
   margin-bottom: 30px;
   margin-top: 10px;
+  /* -webkit-appearance: none; */
 
   /* margin-top: -22px; */
 }
@@ -185,7 +190,8 @@ label {
 input {
   width: 100%;
   min-width: 70px;
- 
+  -webkit-appearance: none;
+   border: 1px solid ;
 }
 
 /* input[type="submit"] {
